# ndarray-cuda-matmul

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs
examples/MultipleLinearRegression/: Cargo.toml  build.rs
examples/MultipleLinearRegression/src/: main.rs
examples/PCA/: Cargo.toml
examples/PCA/src/: main.rs
examples/pca/: Cargo.toml  build.rs
examples/pca/src/: main.rs
src/: common.h  lib.rs  matmul.cu
