
[package]
name = "ndarray-cuda-matmul"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ndarray = "0.15.6"
ndarray-linalg = { version = "0.16.0",features = ["openblas"] }
libc = "0.2.153"

[build-dependencies]
bindgen_cuda = "0.1.5"
