[package]
name = "mlr"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ndarray = "0.15.6"
ndarray-rand = "0.13"
rand = "0.8"
rand_distr = "0.4"
ndarray-linalg = { version = "0.16.0",features = ["openblas"] }
ndarray-cuda-matmul = { git = "https://github.com/Lyn-liyuan/ndarray-cuda-matmul.git",branch = "main"}
