[package]
name = "PCA"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
polars = { version = "*", features = ["lazy"]}
ndarray = "0.15.6"
ndarray-linalg = { version = "0.16.0",features = ["openblas"] }
ndarray-cuda-matmul = { git = "https://github.com/Lyn-liyuan/ndarray-cuda-matmul.git",branch = "main"}