[package]
name = "pca"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
polars = { version = "*", features = ["lazy","ndarray"]}
polars-core = "*"
plotters = "0.3.5"
ndarray = "0.15.6"
ndarray-linalg = { version = "0.16.0",features = ["openblas"] }
ndarray-stats = "0.5.1"
ndarray-cuda-matmul = { path = "/disk/lyn/workspace/matmul"}